--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "всякие штуки, которые нужны мне для приятной жизни",
   "main": "src/index.ts",
   "scripts": {
+    "build": "npm i",
     "start": "ts-node src/index.ts",
     "lint-ts": "tsc --noEmit",
     "lint": "npm run lint-ts"
