--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "devDependencies": {
     "@types/node": "^17.0.23",
     "@types/ws": "^8.5.3",
-    "prettier": "^2.6.1",
-    "typescript": "^4.6.3"
+    "prettier": "^2.6.1"
   },
   "dependencies": {
     "ts-node": "^10.7.0",
+    "typescript": "^4.6.3",
     "ws": "^8.5.0"
   }
 }
